# sdl_maestro

cnmbot/scripts/: gripper.py
cnmbot/scripts/Gripper/: Close_vacuum.script  Open_vacuum.script
cnmbot/scripts/MiR/: MiR.py
henrybot/: catch1.txt  catch2.txt  install.sh
henrybot/examples/: move_base.ipynb  move_base_simple.sh
henrybot/henrybot_control/: CMakeLists.txt  package.xml
henrybot/henrybot_control/examples/SDL_1/: client_arm.py  test1.py  test2.py  types.py
henrybot/henrybot_control/scripts/: client_arm.py  client_base.py  happy_arm.ipynb  mark_test.py  mrsdl_database.py  mrsdl_demo.py  mrsdl_joint_models.py  test_move.py
henrybot/henrybot_control/src/henry_control/: client_gripper.py
henrybot/henrybot_description/: .setup_assistant  CMakeLists.txt  package.xml
henrybot/henrybot_description/config/: fake_controllers.yaml  henry.srdf  ompl_planning.yaml
henrybot/henrybot_description/launch/: demo.launch  henrybot_urdf.launch  move_group.launch
henrybot/henrybot_description/rviz/: henry.rviz  henry_arm.rviz
henrybot/henrybot_description/scripts/: move_base_430.py
henrybot/henrybot_description/urdf/: henry.urdf.xacro  table.urdf.xacro
henrybot/henrybot_driver/: CMakeLists.txt  package.xml  setup.py
henrybot/henrybot_driver/launch/: arm.launch  arm_debug.launch  base.launch  base_debug.launch  debug.launch  henry.launch  henry_arm.launch  henry_base.launch  henry_model.launch  henry_moveit.launch  henry_rviz.launch
henrybot/henrybot_driver/nodes/: mir_250_bridge.py
henrybot/henrybot_driver/nodes/launch/: arm.launch  base.launch
henrybot/henrybot_driver/rviz/: henry.rviz
henrybot/henrybot_driver/scripts/: move_arm.py  test_camera.py  test_move_arm.py  test_move_base.py  test_move_gripper.py
henrybot/henrybot_moveit/: .setup_assistant  CMakeLists.txt  package.xml
henrybot/henrybot_moveit/rviz/: henry_arm.rviz  henry_base.rviz
henrybot/henrybot_moveit/urdf/: henry.urdf.xacro
henrybot/install/: install.sh  install_dobot.sh
rpl_ur_ws2/install/: local_setup.sh  setup.bash  setup.sh  setup.zsh
rpl_ur_ws2/log/: latest_build
rpl_ur_ws2/src/install/: local_setup.sh  setup.ps1  setup.sh
rpl_ur_ws2/src/log/: latest_build
rpl_ur_ws2/src/ur_publisher/: setup.cfg  setup.py
rpl_ur_ws2/src/ur_publisher/launch/: rpl_test_joint_trajectory_controller.launch.py  rpl_ur_move.launch.py
(+9 files in other folders)
