<?xml version="1.0"?>
<package format="2">
  <name>henrybot_driver</name>
  <version>0.0.1</version>
  <description>A reverse ROS bridge for the MiR250 robot</description>

  <license>BSD</license>
  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roslaunch</build_depend>

  <depend>actionlib_msgs</depend>
  <depend>diagnostic_msgs</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>geometry_msgs</depend>
  <depend>mir_actions</depend>
  <depend>mir_msgs</depend>
  <depend>mir_driver</depend>
  <depend>move_base_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>python3-websocket</depend>
  <depend>rosgraph_msgs</depend>
  <depend>rospy</depend>
  <depend>rospy_message_converter</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf</depend>
  <depend>visualization_msgs</depend>

  <exec_depend>mir_description</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
</package>
